# madr-backend

./: .coverage  .env  .gitignore  README.md  compose.yml  main.py  pyproject.toml
madr/: app.py  config.py  dependecies.py
madr/api/: router.py  users.py
madr/api/v1/: auth.py  books.py  novelists.py  router.py  users.py
madr/core/: database.py  security.py
madr/models/: __init__.py  book.py  books.py  mixins.py  novelist.py  novelists.py  romancista.py  user.py
madr/schemas/: books.py  mixins.py  novelists.py  user.py  users.py
migrations/: env.py
migrations/versions/: 94ec873ca8e4_add_on_update.py  aa7d398d850a_new_books_table.py  badd442185c9_init.py
tests/: conftest.py  test_app.py  test_user.py
tests/database/: test_db_novelist.py  test_db_user.py
